<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="instatag.com.smarthashtag.Feedback"
    android:background="@drawable/feedbak">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:textColor="#000"
                android:singleLine="true"
                android:textSize="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:singleLine="true"
                android:textSize="20dp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:textColor="#000"                android:height="80dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="20dp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"

                android:paddingTop="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:background="#375393"

                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="~~~OR~~~"
                android:gravity="center"
                android:textColor="#f10a0a"

                android:textSize="23sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="Drop Message to My InstaAccount"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#fff"
                android:background="#375393"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:autoLink="all"
                android:textSize="25dp"
                android:text="https://goo.gl/kKr3ZV"
                android:textColor="#fff"

                android:gravity="center"

                />
            <Button android:id="@+id/rateus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
               android:text="Give Rating"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:background="#375393"
                android:gravity="center"
                />


        </LinearLayout>


</LinearLayout>
